--- a/src/iDeal/project.json
+++ b/src/iDeal/project.json
@@ -1,14 +1,15 @@
-﻿{
+{
   "version": "1.0.0-*",
   "buildOptions": {
     "emitEntryPoint": true
   },
 
   "dependencies": {
+    "iDealCore": "1.0.0-*",
     "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.1"
-    }
+      "version": "1.1.0",
+      "type": "platform"
+    },
   },
 
   "frameworks": {
