--- a/src/iDeal/iDeal.csproj
+++ b/src/iDeal/iDeal.csproj
@@ -12,8 +12,12 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netcoreapp1.0\iDeal.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
-    <ProjectReference Include="..\iDealCore\iDealCore.csproj" />
+    <ProjectReference Include="..\iDealCore\IDealCore.csproj" />
   </ItemGroup>
 
 </Project>
